# strata

./: .gitignore  CMakeLists.txt  FindLua.cmake  FindSelene.cmake  FindTinygame.cmake  LICENSE  README.md  config.h.cmake
data/lua/: start.lua
data/lua/sky/: basicsky.lua  load.lua
data/lua/terrain/: load.lua  terrain.lua
data/lua/ui/: console.lua  load.lua  mainmenu.lua  monitor.lua  tergen.lua  ui.lua
src/: selene.h  strata.cpp  tests.cpp
src/core/: appl.hpp  game.hpp  lua.hpp  render.hpp  sky.cpp  sky.hpp  terrain.cpp  terrain.hpp  ui.cpp  ui.hpp
src/core/interface/: appl.hpp  render.hpp  terrain.cpp  terrain.hpp
src/interface/: appl.hpp  keys.hpp  lua.hpp  render.hpp  sky.hpp  terrain.cpp  terrain.hpp  ui.cpp  ui.hpp  uikeys.hpp
src/mesh/: bundle.cpp  bundle.hpp  drawable.cpp  drawable.hpp  element.cpp  element.hpp  interface.cpp  interface.hpp  layer.cpp  layer.hpp  mesh.hpp  remotevertex.cpp  remotevertex.hpp  stitch.hpp  strip.cpp  strip.hpp  terrain.cpp  terrain.hpp  terraingen.cpp  terrainpars.hpp  texture.hpp  toplmesh.hpp  vecmath.hpp  vertexmodifier.hpp
src/selene/: BaseFun.h  Class.h  ClassFun.h  Ctor.h  Dtor.h  Fun.h  LuaName.h  LuaRef.h  MetatableRegistry.h  Obj.h  ObjFun.h  Registry.h  Selector.h  State.h  Tuple.h  exotics.h  function.h  primitives.h  traits.h  util.h
src/tools/: convertstring.hpp  texture.hpp
src/ui/: button.hpp  console.hpp  input.hpp  mainmenu.hpp  monitor.hpp  screensquare.hpp  textbox.hpp  window.hpp
